--- a/index.html
+++ b/index.html
@@ -11,11 +11,90 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="styles.css"> </head>
+    <link rel="stylesheet" href="styles.css"> <script type="module">
+        // Import Firebase modules
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-app.js";
+        import { getAuth, signInAnonymously, signInWithCustomToken, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
+        import { getFirestore, collection, addDoc, onSnapshot, query, serverTimestamp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
+
+        // Expose Firebase and its modules globally for script.js
+        window.firebase = {
+            app: null,
+            auth: null,
+            firestore: {
+                db: null,
+                collection: collection,
+                addDoc: addDoc,
+                onSnapshot: onSnapshot,
+                query: query,
+                serverTimestamp: serverTimestamp
+            },
+            getAuth: getAuth,
+            signInAnonymously: signInAnonymously,
+            signInWithCustomToken: signInWithCustomToken,
+            onAuthStateChanged: onAuthStateChanged
+        };
+
+        // Global variables for Firebase instances and state
+        window.currentUserId = null;
+        window.isFirebaseReady = false;
+
+        // Get app ID and Firebase config from the environment
+        const appId = typeof __app_id !== 'undefined' ? __app_id : 'default-app-id';
+        const firebaseConfig = JSON.parse(typeof __firebase_config !== 'undefined' ? __firebase_config : '{}');
+
+        // Initialize Firebase if config is available
+        if (Object.keys(firebaseConfig).length > 0) {
+            window.firebase.app = initializeApp(firebaseConfig);
+            window.firebase.firestore.db = getFirestore(window.firebase.app);
+            window.firebase.auth = getAuth(window.firebase.app);
+
+            // Listen for authentication state changes
+            window.firebase.onAuthStateChanged(window.firebase.auth, async (user) => {
+                if (user) {
+                    // User is signed in.
+                    window.currentUserId = user.uid;
+                    console.log("Firebase Auth Ready. User ID:", window.currentUserId);
+                    window.isFirebaseReady = true;
+                    // Trigger initial meme display after auth is ready
+                    if (typeof window.initMemeDisplay === 'function') {
+                        window.initMemeDisplay();
+                    }
+                } else {
+                    // User is signed out, try to sign in anonymously or with custom token
+                    try {
+                        if (typeof __initial_auth_token !== 'undefined' && __initial_auth_token) {
+                            await window.firebase.signInWithCustomToken(window.firebase.auth, __initial_auth_token);
+                        } else {
+                            await window.firebase.signInAnonymously(window.firebase.auth);
+                        }
+                    } catch (error) {
+                        console.error("Error signing in:", error);
+                        // Fallback to a random ID if anonymous sign-in fails
+                        window.currentUserId = crypto.randomUUID();
+                        window.isFirebaseReady = true;
+                        if (typeof window.initMemeDisplay === 'function') {
+                            window.initMemeDisplay();
+                        }
+                    }
+                }
+            });
+        } else {
+            console.error("Firebase config is missing or empty. Cannot initialize Firebase.");
+            // Fallback for when Firebase config is not available
+            window.currentUserId = crypto.randomUUID();
+            window.isFirebaseReady = true;
+            if (typeof window.initMemeDisplay === 'function') {
+                window.initMemeDisplay();
+            }
+        }
+    </script>
+</head>
 <body class="bg-gray-100">
     <header class="bg-purple-600 text-white py-4 text-center rounded-b-md shadow-md">
         <h1 class="text-2xl font-semibold">Мой Мемхаб</h1>
         <p class="text-lg">Сайт для ваших любимых мемов!</p>
+        <p class="text-sm mt-1">Ваш ID: <span id="user-id-display" class="font-bold">Загрузка...</span></p>
     </header>
 
     <main class="container mx-auto mt-4 p-4">
@@ -43,6 +122,7 @@
 
         <div id="memes" class="mt-4">
             <h2 class="text-xl font-semibold mb-2 text-purple-600">Последние Мемы</h2>
+            <p id="loading-memes" class="text-gray-500">Загрузка мемов...</p>
             </div>
     </main>
 
