--- a/index.html
+++ b/index.html
@@ -1,129 +1,148 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Мой Мемхаб</title>
-    <meta name="description" content="Сайт для обмена мемами на русском языке. Делитесь смешными картинками, видео и историями с друзьями!">
-    <meta name="keywords" content="мемы, смешные картинки, видео, юмор, русский язык, мемы на русском, мемы 2024, приколы">
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <title>project zoob zoob</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="styles.css"> <script type="module">
-        // Import Firebase modules
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-app.js";
-        import { getAuth, signInAnonymously, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
-        import { getFirestore, collection, addDoc, onSnapshot, query, serverTimestamp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
-
-        // IMPORTANT: Replace these with YOUR ACTUAL Firebase project configuration!
-        // You can find this in your Firebase project settings -> Project settings -> Your apps -> Web app -> Config
-        const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",
-            authDomain: "YOUR_AUTH_DOMAIN",
-            projectId: "YOUR_PROJECT_ID",
-            storageBucket: "YOUR_STORAGE_BUCKET",
-            messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-            appId: "YOUR_APP_ID"
-        };
-
-        // Global variables for Firebase instances and state
-        // These are exposed globally so script.js can access them
-        window.firebase = {
-            app: null,
-            auth: null,
-            firestore: {
-                db: null,
-                collection: collection,
-                addDoc: addDoc,
-                onSnapshot: onSnapshot,
-                query: query,
-                serverTimestamp: serverTimestamp
-            },
-            getAuth: getAuth,
-            signInAnonymously: signInAnonymously,
-            onAuthStateChanged: onAuthStateChanged,
-            config: firebaseConfig // Expose config globally for script.js
-        };
-
-        window.currentUserId = null;
-        window.isFirebaseReady = false;
-
-        // Initialize Firebase with your provided configuration
-        window.firebase.app = initializeApp(firebaseConfig);
-        window.firebase.firestore.db = getFirestore(window.firebase.app);
-        window.firebase.auth = getAuth(window.firebase.app);
-
-        // Listen for authentication state changes
-        window.firebase.onAuthStateChanged(window.firebase.auth, async (user) => {
-            if (user) {
-                // User is signed in.
-                window.currentUserId = user.uid;
-                console.log("Firebase Auth Ready. User ID:", window.currentUserId);
-                window.isFirebaseReady = true;
-                // Trigger initial meme display after auth is ready
-                if (typeof window.initMemeDisplay === 'function') {
-                    window.initMemeDisplay();
-                }
-            } else {
-                // User is signed out, try to sign in anonymously
-                try {
-                    await window.firebase.signInAnonymously(window.firebase.auth);
-                } catch (error) {
-                    console.error("Error signing in anonymously:", error);
-                    // Fallback to a random ID if anonymous sign-in fails
-                    // Note: Firestore rules might still block access without proper auth.
-                    window.currentUserId = crypto.randomUUID();
-                    window.isFirebaseReady = true;
-                    if (typeof window.initMemeDisplay === 'function') {
-                        window.initMemeDisplay();
-                    }
-                }
-            }
-        });
-    </script>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body class="bg-gray-100">
-    <header class="bg-purple-600 text-white py-4 text-center rounded-b-md shadow-md">
-        <h1 class="text-2xl font-semibold">Мой Мемхаб</h1>
-        <p class="text-lg">Сайт для ваших любимых мемов!</p>
-        <p class="text-sm mt-1">Ваш ID: <span id="user-id-display" class="font-bold">Загрузка...</span></p>
-    </header>
-
-    <main class="container mx-auto mt-4 p-4">
-        <div class="upload-form">
-            <h2 class="text-xl font-semibold mb-2 text-blue-600">Загрузить Мем</h2>
-            <form id="uploadForm" class="space-y-4">
-                <div>
-                    <label for="title" class="block text-gray-700 text-sm font-bold mb-2">Название:</label>
-                    <input type="text" id="title" name="title" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" required>
-                    <div id="title-error" class="text-red-500 text-xs italic" style="display: none;"></div>
-                </div>
-                <div>
-                    <label for="description" class="block text-gray-700 text-sm font-bold mb-2">Описание:</label>
-                    <textarea id="description" name="description" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"></textarea>
-                    <div id="description-error" class="text-red-500 text-xs italic" style="display: none;"></div>
-                </div>
-                <div>
-                    <label for="content" class="block text-gray-700 text-sm font-bold mb-2">Мем (картинка или видео):</label>
-                    <input type="file" id="content" name="content" accept="image/*,video/*" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" required>
-                     <div id="content-error" class="text-red-500 text-xs italic" style="display: none;"></div>
-                </div>
-                <button type="submit" class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Загрузить</button>
-            </form>
+<body class="min-h-screen flex flex-col relative">
+    <nav class="bg-gray-800 bg-opacity-90 backdrop-blur-sm p-4 shadow-xl rounded-b-xl flex items-center justify-between w-full border-b-2 border-green-700">
+        <div class="flex items-center space-x-4">
+            <img src="https://uploads.dailydot.com/2024/09/alien-cult-1.jpg?q=65&auto=format&w=1200"
+                 alt="project zoob zoob logo"
+                 class="h-12 w-12 md:h-16 md:w-16 rounded-full object-cover shadow-lg border-2 border-green-600"
+                 onerror="this.onerror=null;this.src='https://placehold.co/100x100/A855F7/FFFFFF?text=logo';">
+            <h1 class="text-3xl md:text-4xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-green-500 to-teal-500 drop-shadow-md animate-pulse-glow">
+                project zoob zoob
+            </h1>
         </div>
 
-        <div id="memes" class="mt-4">
-            <h2 class="text-xl font-semibold mb-2 text-purple-600">Последние Мемы</h2>
-            <p id="loading-memes" class="text-gray-500">Загрузка мемов...</p>
+        <div class="flex items-center space-x-4">
+            <a id="discordTopBarButton" href="https://discord.gg/NXBVRSfv7t" target="_blank" rel="noopener noreferrer"
+               class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full shadow-lg transition-colors duration-300 btn-press btn-hover-effect">
+                discord
+            </a>
+
+            <button id="themeToggle"
+                    class="bg-gray-600 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded-full shadow-lg transition-colors duration-300 btn-press btn-hover-effect">
+                toggle theme
+            </button>
+
+            <div class="relative">
+                <button id="creditsButton"
+                        class="bg-green-600 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-full shadow-lg transition-all duration-200 ease-in-out btn-press btn-hover-effect">
+                    credits
+                </button>
+                <div id="creditsContainer" class="absolute right-0 mt-2 flex flex-col items-center space-y-4 bg-gray-700 bg-opacity-90 p-6 rounded-xl shadow-2xl border-2 border-green-600">
+                    <div class="flex flex-col items-center space-y-3">
+                        <img id="catImage"
+                             src="https://cdn.discordapp.com/attachments/1373719727742124126/1375595173857198100/catblehhhh.png?ex=68324256&is=6830f0d6&hm=742fea526b8d5ff1873e906c0a063738061920435f39ea889179683d1cca54536&"
+                             alt="cat gif"
+                             class="max-w-[120px] md:max-w-[150px] rounded-lg shadow-md border-2 border-green-500">
+                        <p id="creditsName" class="text-white text-lg font-semibold text-shadow-sm">vakat: server owner</p>
+                    </div>
+
+                    <div class="flex flex-col items-center space-y-3 pt-4 border-t border-gray-600 w-full">
+                        <img id="adminImage"
+                             src="https://cdn.discordapp.com/attachments/1206800887817699388/1375687736693886997/image.png?ex=6832988b&is=6831470b&hm=0c42821b871fdafe7489d05b618762f699d25aa7a7e3c94eab5aa775187bbf22&"
+                             alt="admin gif"
+                             class="max-w-[120px] md:max-w-[150px] rounded-lg shadow-md border-2 border-blue-500">
+                        <p id="adminName" class="text-white text-lg font-semibold text-shadow-sm">guy6942021: head admin</p>
+                    </div>
+                </div>
             </div>
+
+            <button class="md:hidden text-gray-300 focus:outline-none">
+                <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+                </svg>
+            </button>
+        </div>
+    </nav>
+
+    <main class="flex-grow flex flex-col items-center justify-center p-4">
+        <div class="flex flex-wrap justify-center gap-8 p-4 w-full max-w-5xl">
+
+            <div class="content-window kind-message-theme text-white text-base md:text-lg p-6 rounded-xl shadow-lg border-2 w-full md:w-1/3 lg:w-1/4 flex-grow flex flex-col items-center justify-center">
+                <h2 class="text-2xl font-bold mb-4 text-blue-300 text-center">daily kindness</h2>
+                <p id="kindMessageText" class="text-center"></p>
+            </div>
+
+            <div class="content-window about-theme text-center text-white text-xl md:text-2xl font-medium p-6 rounded-xl shadow-lg border-2 w-full md:w-1/3 lg:w-1/4 flex-grow">
+                <p>project zoob zoob is a script hub, made for sharing scripts in order to destruct games. on our discord server we do events, and maybe even giveaways? join, you dont want to miss this. <a href="https://discord.gg/NXBVRSfv7t" target="_blank" rel="noopener noreferrer">join our discord server here!</a></p>
+            </div>
+
+            <div class="content-window links-theme text-left text-white text-base md:text-lg p-6 rounded-xl shadow-lg border-2 w-full md:w-1/3 lg:w-1/4 flex-grow max-h-96 overflow-y-auto custom-scrollbar">
+                <div class="flex justify-between items-center mb-4">
+                    <h2 class="text-2xl font-bold text-green-300">executor links</h2>
+                    <p id="dataSourceText" class="text-gray-300 text-sm md:text-base">data from voxlis.net</p>
+                </div>
+                <ul class="space-y-2">
+                    <li><a href="https://getswift.gg/" target="_blank" rel="noopener noreferrer">swift</a></li>
+                    <li><a href="https://getwave.gg/" target="_blank" rel="noopener noreferrer">wave</a></li>
+                    <li><a href="https://zenith.win/" target="_blank" rel="noopener noreferrer">zenith</a></li>
+                    <li><a href="https://discord.com/invite/ggawp" target="_blank" rel="noopener noreferrer">awp</a></li>
+                    <li><a href="https://www.raptor.fun/" target="_blank" rel="noopener noreferrer">macsploit</a></li>
+                    <li><a href="https://getcryptic.net/" target="_blank" rel="noopener noreferrer">cryptic</a></li>
+                    <li><a href="https://codex.lol/" target="_blank" rel="noopener noreferrer">codex</a></li>
+                    <li><a href="https://discord.com/invite/AURAHhSMxc" target="_blank" rel="noopener noreferrer">matcha</a></li>
+                    <li><a href="https://getvisual.cc/" target="_blank" rel="noopener noreferrer">visual</a></li>
+                    <li><a href="https://getsolara.dev/" target="_blank" rel="noopener noreferrer">solora</a></li>
+                    <li><a href="https://www.xeno.onl/" target="_blank" rel="noopener noreferrer">xeno</a></li>
+                    <li><a href="https://krnl.cat/" target="_blank" rel="noopener noreferrer">krnl</a></li>
+                    <li><a href="https://volcano.best/" target="_blank" rel="noopener noreferrer">volcano</a></li>
+                    <li><a href="https://deltaexploits.gg/" target="_blank" rel="noopener noreferrer">delta</a></li>
+                    <li><a href="https://hydrogen.lat/" target="_blank" rel="noopener noreferrer">hydrogen</a></li>
+                    <li><a href="https://cultofintellect.com/" target="_blank" rel="noopener noreferrer">dx9ware</a></li>
+                    <li><a href="https://getvelocity.live/" target="_blank" rel="noopener noreferrer">velocity</a></li>
+                    <li><a href="https://appleware.dev/" target="_blank" rel="noopener noreferrer">apple-ware</a></li>
+                    <li><a href="https://wearedevs.net/d/JJSploit" target="_blank" rel="noopener noreferrer">jjsploit</a></li>
+                    <li><a href="https://vegax.gg/" target="_blank" rel="noopener noreferrer">vegax</a></li>
+                    <li><a href="https://wearedevs.net/d/Ronix" target="_blank" rel="noopener noreferrer">ronix</a></li>
+                    <li><a href="https://spdmteam.com/index" target="_blank" rel="noopener noreferrer">arceusx</a></li>
+                    <li><a href="https://nezur.io/" target="_blank" rel="noopener noreferrer">nezur</a></li>
+                </ul>
+            </div>
+
+            <div class="content-window feedback-theme text-white text-base md:text-lg p-6 rounded-xl shadow-lg border-2 w-full md:w-1/3 lg:w-1/4 flex-grow flex flex-col">
+                <h2 class="text-2xl font-bold mb-4 text-green-300 text-center">feedback</h2>
+                <p class="text-gray-300 text-sm mb-2 text-center">send a message to me anonymously!</p>
+                <textarea id="feedbackMessage"
+                          class="w-full h-32 p-3 rounded-lg bg-gray-700 text-white placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-green-500 focus:border-green-500 mb-4 resize-none"
+                          placeholder="type your feedback here..."
+                          style="background-color: rgba(55, 65, 81, 0.8);"></textarea>
+                <button id="sendFeedbackButton"
+                        class="bg-green-600 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-full shadow-lg transition-colors duration-300 btn-press btn-hover-effect">
+                    send feedback
+                </button>
+                <p id="feedbackStatus" class="text-center mt-2 text-sm"></p>
+            </div>
+
+            <div class="content-window script-theme text-white text-base md:text-lg p-6 rounded-xl shadow-lg border-2 w-full md:w-1/3 lg:w-1/4 flex-grow flex flex-col items-center justify-center">
+                <h2 class="text-2xl font-bold mb-4 text-cyan-300 text-center">script:</h2>
+                <p class="text-gray-300 text-center">script is currently unavailable, check back another time</p>
+            </div>
+
+            <div class="content-window honorable-mention-theme text-white text-base md:text-lg p-6 rounded-xl shadow-lg border-2 w-full md:w-1/3 lg:w-1/4 flex-grow flex flex-col items-center justify-center">
+                <h2 class="text-2xl font-bold mb-4 text-green-300 text-center">honorable mention</h2>
+                <div class="image-with-text-container">
+                    <img id="honorableMentionImage"
+                         src="https://th.bing.com/th/id/OIP.rN7jjTyeZ-QU6FkDRK5M8wHaF0?cb=iwc2&rs=1&pid=ImgDetMain"
+                         alt="random image"
+                         class="random-image"
+                         onerror="this.onerror=null;this.src='https://placehold.co/400x300/6B7280/FFFFFF?text=image';">
+                </div>
+            </div>
+
+        </div>
     </main>
 
-    <footer class="bg-gray-800 text-white py-4 text-center mt-8 rounded-t-md shadow-md">
-        <p>© 2024 Мой Мемхаб. Все права защищены.</p>
-        <p>Сделано с любовью и юмором.</p>
+    <footer class="footer-text">
+        <p id="footerMessage">you've hit rock bottom</p>
     </footer>
 
-    <script src="script.js"></script> </body>
+    <script src="script.js"></script>
+</body>
 </html>
